added new file for project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-htm
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Class Project</title>
+</head>
+<body>
+
+    <header>
+        <img src="" alt=""><img src="" alt="">
+        <h1>Class Project</h1>
+        <nav>
+            <ul>
+                <li>item</li>
+                <li>item</li>
+                <li>item</li>
+                <li>item</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <article>
+            <img src="" alt="">
+            <h3>item</h3>
+            <p>items</p>
+        </article>
+        <article>
+            <img src="" alt="">
+            <h3>item</h3>
+            <p>items</p>
+        </article>
+        <article>
+            <img src="" alt="">
+            <h3>item</h3>
+            <p>items</p>
+        </article>
+    </main>
+
+    <footer>
+      <nav>
+        <ul>
+           <li>one last item</li> 
+        </ul>  
+      </nav>   
+      <p>&copy;2020 S. R. Marical</p>
+    </footer>
+</body>
+</html>
