--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -21,6 +22,9 @@
     </header>
 
     <main>
+        <script src="js/ask-name.js"></script>
+        <script src="js/add-content.js"></script>
+        <script src="js/ask-prefence.js"></script>
         <article>
             <img src="" alt="">
             <h3>item</h3>
