--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <body>
 
     <header>
-        <img src="" alt=""><img src="" alt="">
-        <h1>Class Project</h1>
+        <h1>The History of the Crapper</h1>
         <nav>
             <ul>
-                <li>item</li>
-                <li>item</li>
-                <li>item</li>
-                <li>item</li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </nav>
     </header>
@@ -26,12 +24,12 @@
         <script src="js/add-content.js"></script>
         <script src="js/ask-prefence.js"></script>
         <article>
-            <img src="" alt="">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Thomas_Crapper.jpg" alt="Thomas Crapper">
             <h3>item</h3>
             <p>items</p>
         </article>
         <article>
-            <img src="" alt="">
+            <img src="https://lh3.googleusercontent.com/proxy/H0Bwml1YaXyoAFQ7ZCxDnCrSm5fl4d1kuRJmxiwyjBHuObJjH4_9bTL7CGWvoyIrVBOOjVSQIkZXG3SO45nSu5mvM7u5TBUc06f5UwIZNaAQG8LBKmt08D6VqK2QHZ5h4tnFWKPx" alt="Crapper commode">"
             <h3>item</h3>
             <p>items</p>
         </article>
