--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>The History of the Crapper</h1>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Thomas Crapper was born in 1836.</li>
+                <li>Thomas grew up plumbing</li>
+                <li>In 1853 he became a Journeyman plumber</li>
             </ul>
         </nav>
     </header>
