added more content

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li>Thomas Crapper was born in 1836.</li>
-                <li>Thomas grew up plumbing</li>
-                <li>In 1853 he became a Journeyman plumber</li>
+                <li>Thomas grew up plumbing.</li>
+                <li>In 1853 he became a Journeyman plumber.</li>
             </ul>
         </nav>
     </header>
@@ -25,13 +25,13 @@
         <script src="js/ask-prefence.js"></script>
         <article>
             <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Thomas_Crapper.jpg" alt="Thomas Crapper">
-            <h3>item</h3>
-            <p>items</p>
+            <h3>How the magic happened</h3>
+            <p>In the 1861, Crapper was a sanitary engineer, with his own brass foundry and various other shops in England. There Thomas began to build many different plumbing supplys with his 9 patents. 3 of the 9 were water closet improvements that helped shape what we know as the toilet today.</p>
         </article>
         <article>
             <img src="https://lh3.googleusercontent.com/proxy/H0Bwml1YaXyoAFQ7ZCxDnCrSm5fl4d1kuRJmxiwyjBHuObJjH4_9bTL7CGWvoyIrVBOOjVSQIkZXG3SO45nSu5mvM7u5TBUc06f5UwIZNaAQG8LBKmt08D6VqK2QHZ5h4tnFWKPx" alt="Crapper commode">"
-            <h3>item</h3>
-            <p>items</p>
+            <h3>The 1880's for Crapper</h3>
+            <p>In the 1880's Prince Edward purchased a home and requested the services of Thomas Crapper & Co. to supply the plumbing for his home, including 30 lavatories thus giving Thomas his first Royal notice. This job only furthered his name in infamy in relation to the toilet.</p>
         </article>
         <article>
             <img src="" alt="">
