--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>The History of the Crapper</h1>
+        <h1>The History of Thomas Crapper</h1>
         <nav>
             <ul>
                 <li>Thomas Crapper was born in 1836.</li>
