--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>In the 1861, Crapper was a sanitary engineer, with his own brass foundry and various other shops in England. There Thomas began to build many different plumbing supplys with his 9 patents. 3 of the 9 were water closet improvements that helped shape what we know as the toilet today.</p>
         </article>
         <article>
-            <img src="https://lh3.googleusercontent.com/proxy/H0Bwml1YaXyoAFQ7ZCxDnCrSm5fl4d1kuRJmxiwyjBHuObJjH4_9bTL7CGWvoyIrVBOOjVSQIkZXG3SO45nSu5mvM7u5TBUc06f5UwIZNaAQG8LBKmt08D6VqK2QHZ5h4tnFWKPx" alt="Crapper commode">"
+            <img src="/Users/steve.r.marical/codefellows/102/class-project/crapper img.jpg" alt="Crapper commode">"
             <h3>The 1880's for Crapper</h3>
             <p>In the 1880's Prince Edward purchased a home and requested the services of Thomas Crapper & Co. to supply the plumbing for his home, including 30 lavatories thus giving Thomas his first Royal notice. This job only furthered his name in infamy in relation to the toilet.</p>
         </article>
