--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Project</title>
     <link rel="stylesheet" href="style.css">
+    <script src="js/app.js"></script>
 </head>
 <body>
 
@@ -22,9 +23,9 @@
     </header>
 
     <main>
-        <script src="js/ask-name.js"></script>
-        <script src="js/add-content.js"></script>
-        <script src="js/ask-prefence.js"></script>
+        <script>addGreeting();</script>
+        <script>askUsername();</script>
+        <script>askPrefence();</script>
         <article>
             <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Thomas_Crapper.jpg" alt="Thomas Crapper">
             <h3>How the magic happened</h3>
