--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <main>
         <script>addGreeting();</script>
-        <script>askUsername();</script>
-        <script>askPrefence();</script>
+        <script>addUsername();</script>
+        <script>addPrefence();</script>
         <article>
             <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Thomas_Crapper.jpg" alt="Thomas Crapper">
             <h3>How the magic happened</h3>
